--- a/template/assets/scss/demo/style.scss
+++ b/template/assets/scss/demo/style.scss
@@ -33,6 +33,7 @@
 @import "../shared/components/tables";
 @import "../shared/components/tabs";
 @import "../shared/components/textfield";
+@import "../shared/components/eo";
 
 /* === Sample screens === */
 @import "../shared/sample-screens/error";
