--- a/template/assets/scss/shared/_utilities.scss
+++ b/template/assets/scss/shared/_utilities.scss
@@ -535,6 +535,10 @@
   padding-right: 3rem !important;
 }
 
+.pt-0 {
+  padding-top: 0rem !important;
+}
+
 .pt-1 {
   padding-top: .25rem !important;
 }
@@ -653,6 +657,11 @@
 .tx-14 { font-size: 14px }
 .tx-15 { font-size: 15px }
 .tx-16 { font-size: 16px }
+.tx-17 { font-size: 17px }
+.tx-18 { font-size: 18px }
+.tx-19 { font-size: 19px }
+.tx-20 { font-size: 20px }
+.tx-25 { font-size: 25px }
 
 .grid-gap-0 {
  grid-gap: unset;
