--- a/template/assets/scss/demo/_sidebar.scss
+++ b/template/assets/scss/demo/_sidebar.scss
@@ -31,6 +31,11 @@
       p {
         margin-bottom: 6px;
       }
+      img{
+        width: 70%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
     }
     .mdc-drawer-menu {
       .mdc-drawer-item {
@@ -53,7 +58,6 @@
         .mdc-expansion-panel-link,
         .mdc-drawer-link {
           height: 40px;
-          line-height: 48px;
           padding: 0 0.75rem;
           @include display-flex();
           @include align-items(center);
@@ -105,8 +109,8 @@
       padding: 0 0.75rem;
       a {
         font-weight: 500;
-        font-size: 12px;
-        color: #bababa;
+        font-size: 14px;
+        color: #ffffff;
         padding: 0 10px;
         &:first-child {
           padding-left: 0;
